# wmutils-rust

./: Cargo.toml  README.md
src/: killw.rs  lsw.rs  mapw.rs  pfw.rs  util.rs  wattr.rs  wrs.rs  wtf.rs
